tests/ui/unexpected_colon.stderr
error: expected expression, found `:`
  --> $DIR/unexpected_colon.rs:13:13
   |
13 |     json!({ : true });
   |             ^

